--- a/style.css
+++ b/style.css
@@ -1,4 +1,19 @@
-body {background-color:tan;}
-h1{color:green;}
+body {background-color:black;font-family:arial;color:white}
+h1{color:grey;font-family:verdana}
+
+/* Main Content */
+.maindiv {
+    background-color: white;
+    color: black;
+    width: 300px;
+    padding: 20px;
+    border-radius: 25px;
+    align: center;
+}
+
+/* Highlighting the value in the result */
+.highlight_value {
+    background-color: yellow;
+}
 
 
