--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@ h1{color:grey;font-family:verdana}
 .maindiv {
     background-color: white;
     color: black;
-    width: 300px;
+    width: 600px;
     padding: 20px;
     border-radius: 25px;
-    align: center;
+    margin: auto;
 }
 
 /* Highlighting the value in the result */
