--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {background-color:black;font-family:arial;color:white}
-h1{color:grey;font-family:verdana}
+h1{color:grey;font-family:verdana;text-align: center;}
 
 /* Main Content */
 .maindiv {
@@ -16,34 +16,21 @@ h1{color:grey;font-family:verdana}
     background-color: yellow;
 }
 
-.calculator-section {
-    width: 300px;
-    display: flex;
-    margin: auto;
-}
-
-.calculator-section div:first-child {
-    width: 150px;
-}
-
-.result-section {
-    width: 300px;
-    margin: auto;
-}
-
-.calculator-form-table {
-    width: 350px;
-    margin: auto;
-}
-
 .calculator-form-table tbody td:first-child {
     width: 150px;
     text-align: left;
     vertical-align: middle;
+    padding: 5px 0 5px 0;
+    font-weight: 500;
 }
 
 .calculator-form-table tbody td:last-child {
     text-align: left;
+    padding: 5px 0 5px 0;
+}
+
+.flex-display {
+    display: flex;
 }
 
 
